# Floating_Sensor

./: .gitignore  README.md  deployment.md  smoke_test.md
new_solution/src/: config.yaml  docker-compose.yml  main.py  requirements.txt
old_solution/: .gitattributes  .gitignore  .project  esp_attr.h
old_solution/components/SimpleCLI/: .library.json  CMakeLists.txt
old_solution/components/SimpleCLI/src/: StringCLI.h
old_solution/deploySmartSensor/: dbSmartSensor  docker_scriptingnotes.txt  grafanaData  grafana_install.sh  influx_install.sh  mosqitto_install.sh  node-red_setup.sh  sqlite_install.sh
old_solution/docker/: scriptingnotes.txt
old_solution/grafana/: SmartSensor Dashboard 1.json
old_solution/main/: CMakeLists.txt  EEPROM.cpp  EEPROM.h  acmm.h  acmm2.uu  battMeas.h  blink.cpp  blink.h  cli.h  config.h  fft_data.h  iir.cpp  integer_fft.c  integer_fft.h  logit.cpp  logit.h  main.h  main__.__cpp  mqttMsg.cpp  msgProcessor.cpp  msgSender.cpp  msgSender.h  otaUpgrade.h  phaseMeas.cpp  phaseMeas.h  scratch.cpp  serialEncap.cpp  serialEncap.h  sleep.cpp  smartconfig.h  taskMeasure.cpp  taskMeasure.h  timeespt.cpp  tp.h  utils.h  wifiScan.cpp  wifiScan.h
old_solution/node-red/: download.json  rpiInfluxdb.json  rpiMain.json
old_solution/server_certs/: ca_cert.pem  ca_key.pem
old_solution/zdjecia szmatek testowych/: moisture calibration results.txt  moisture callib results.xlsx
old_solution_not_used/: .cproject  CMakeLists.txt  partition_table.csv  sdkconfig
old_solution_not_used/deploySmartSensor/: influxdbData  localWlan.sh
old_solution_not_used/hardware/: HW Description.txt
old_solution_not_used/main/: PTHsensorWrapper.cpp  PTHsensorWrapper.h  acmm.cpp  battMeas.cpp  cli.cpp  comb.cpp  comb.h  fileLoger.cpp  fileLoger.h  (+15 more)
(+68 files in other folders)
